chore: add image path

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
   "cSpell.words": [
-    "cplusplus"
+    "cplusplus",
+    "devicon",
+    "devicons",
+    "jsdelivr",
+    "rocketseat"
   ]
 }
